--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,4 +8,13 @@ services:
     volumes:
       - ./api:/app
       - /app/node_modules
-
+  ui:
+    build: ./ui
+    container_name: react-ui
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./ui:/app
+      - /app/node_modules
+    stdin_open: true
+    tty: true
